--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
@@ -25,12 +26,15 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-pager-view": "^6.1.0-rc.2",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.5.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-injectors": "^2.0.0",
