--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^7.0.1",
     "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -27,6 +28,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.3.2",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal-datetime-picker": "^8.9.3",
     "react-native-pager-view": "^6.1.0-rc.2",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
