--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^7.0.1",
-    "@react-navigation/material-top-tabs": "^6.5.3",
+    "@react-native-picker/picker": "^2.4.9",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
@@ -29,14 +30,15 @@
     "react-native-maps": "^1.3.2",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal-datetime-picker": "^8.9.3",
-    "react-native-pager-view": "^6.1.0-rc.2",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.5.0",
-    "react-native-tab-view": "^3.3.4",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-injectors": "^2.0.0",
